--- a/apps/k3s/manifests/storageclass-local-path-demote.yaml
+++ b/apps/k3s/manifests/storageclass-local-path-demote.yaml
@@ -4,9 +4,9 @@ metadata:
   name: local-path
   annotations:
     storageclass.kubernetes.io/is-default-class: "false"
-    objectset.rio.cattle.io/owner-gvk: k3s.cattle.io/v1, Kind=Addon
-    objectset.rio.cattle.io/owner-name: local-storage
-    objectset.rio.cattle.io/owner-namespace: kube-system
+#     objectset.rio.cattle.io/owner-gvk: k3s.cattle.io/v1, Kind=Addon
+#     objectset.rio.cattle.io/owner-name: local-storage
+#     objectset.rio.cattle.io/owner-namespace: kube-system
 provisioner: rancher.io/local-path
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
