--- a/apps/k3s/app.yaml
+++ b/apps/k3s/app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/bruli/k3s-infra.git
     targetRevision: main
-    path: apps
+    path: apps/k3s/manifests
     directory:
       recurse: true
   destination:
