--- a/apps/longhorn/app.yaml
+++ b/apps/longhorn/app.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://charts.longhorn.io
     chart: longhorn
-    targetRevision: 1.6.2
+    targetRevision: ~1.6.0
     helm:
       values: |
         defaultSettings:
