Fixing k3s metrics values

--- a/apps/k3s-metrics/values.yaml
+++ b/apps/k3s-metrics/values.yaml
@@ -5,7 +5,8 @@ args:
   # - --kubelet-use-node-status-port
 
 # hostNetwork pot ajudar en alguns entorns domèstics; per defecte el deixem a false.
-hostNetwork: false
+hostNetwork:
+    enabled: false
 
 resources:
   requests:
