Fix grafana i node exporter values

--- a/apps/node-exporter/values.yml
+++ b/apps/node-exporter/values.yml
@@ -1,122 +1,10 @@
-adminUser: "admin"
-adminPassword: "changeme"   # millor canviar-ho via Secret/ArgoCD secretRef si vols més seguretat
+tolerations:
+  - key: "node-role.kubernetes.io/master"
+    effect: "NoSchedule"
+    operator: "Exists"
+  - key: "node-role.kubernetes.io/control-plane"
+    effect: "NoSchedule"
+    operator: "Exists"
 
 service:
-  type: NodePort
-  nodePort: 32000
-
-persistence:
-  enabled: true
-  size: 2Gi
-  storageClassName: longhorn
-
-datasources:
-  datasources.yaml:
-    apiVersion: 1
-    datasources:
-      - name: Prometheus
-        type: prometheus
-        access: proxy
-        url: http://prometheus-server.prometheus.svc.cluster.local
-        isDefault: true
-
-dashboardProviders:
-  dashboardproviders.yaml:
-    apiVersion: 1
-    providers:
-      - name: 'default'
-        orgId: 1
-        folder: ''
-        type: file
-        disableDeletion: false
-        editable: true
-        options:
-          path: /var/lib/grafana/dashboards/default
-
-dashboards:
-  default:
-    # 1) Dashboard personalitzat amb el promQL d'Average CPU del clúster
-    cluster-cpu-average:
-      json: |-
-        {
-          "id": null,
-          "uid": null,
-          "title": "Cluster CPU Average (5m)",
-          "timezone": "",
-          "schemaVersion": 38,
-          "version": 1,
-          "refresh": "10s",
-          "time": { "from": "now-15m", "to": "now" },
-          "panels": [
-            {
-              "type": "stat",
-              "title": "CPU Avg (cluster, 5m)",
-              "id": 1,
-              "datasource": "Prometheus",
-              "targets": [
-                {
-                  "refId": "A",
-                  "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))",
-                  "instant": true,
-                  "legendFormat": "avg %"
-                }
-              ],
-              "options": {
-                "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
-                "colorMode": "value",
-                "graphMode": "none",
-                "justifyMode": "auto",
-                "orientation": "auto",
-                "textMode": "auto"
-              },
-              "fieldConfig": {
-                "defaults": {
-                  "unit": "percent",
-                  "decimals": 1,
-                  "thresholds": {
-                    "mode": "absolute",
-                    "steps": [
-                      { "color": "green", "value": null },
-                      { "color": "yellow", "value": 60 },
-                      { "color": "red", "value": 85 }
-                    ]
-                  }
-                },
-                "overrides": []
-              },
-              "gridPos": { "h": 8, "w": 8, "x": 0, "y": 0 }
-            },
-            {
-              "type": "timeseries",
-              "title": "CPU Avg (cluster over time)",
-              "id": 2,
-              "datasource": "Prometheus",
-              "targets": [
-                {
-                  "refId": "A",
-                  "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))",
-                  "legendFormat": "avg %",
-                  "instant": false
-                }
-              ],
-              "fieldConfig": {
-                "defaults": { "unit": "percent", "decimals": 1 },
-                "overrides": []
-              },
-              "options": { "legend": { "displayMode": "list", "placement": "bottom" } },
-              "gridPos": { "h": 8, "w": 16, "x": 8, "y": 0 }
-            }
-          ]
-        }
-
-    # 2) Node Exporter Full (dashboard clàssic)
-    node-exporter-full:
-      gnetId: 1860
-      revision: 31
-      datasource: Prometheus
-
-    # 3) Kube State Metrics (recursos k8s)
-    kube-state-metrics:
-      gnetId: 13332
-      revision: 1
-      datasource: Prometheus
+  portName: metrics
