--- a/apps/grafana/values.yml
+++ b/apps/grafana/values.yml
@@ -8,7 +8,7 @@ service:
 persistence:
   enabled: true
   size: 2Gi
-  storageClassName: longhorn
+#   storageClassName: longhorn
 
 datasources:
   datasources.yaml:
