--- a/apps/prometheus/values.yml
+++ b/apps/prometheus/values.yml
@@ -5,7 +5,8 @@ server:
   persistentVolume:
     enabled: true
     size: 2Gi
-    storageClass: longhorn
+#     storageClass: longhorn
+    storageClass: local-path
   service:
     type: ClusterIP
   global:
