--- a/apps/grafana/values.yml
+++ b/apps/grafana/values.yml
@@ -7,8 +7,9 @@ service:
 
 persistence:
   enabled: true
-  size: 2Gi
+#   size: 2Gi
 #   storageClassName: longhorn
+  storageClassName: local-path
 
 datasources:
   datasources.yaml:
