--- a/apps/node-exporter/values.yml
+++ b/apps/node-exporter/values.yml
@@ -1,10 +1,19 @@
 tolerations:
   - key: "node-role.kubernetes.io/master"
-    effect: "NoSchedule"
     operator: "Exists"
+    effect: "NoSchedule"
   - key: "node-role.kubernetes.io/control-plane"
-    effect: "NoSchedule"
     operator: "Exists"
+    effect: "NoSchedule"
+
+nodeSelector:
+  kubernetes.io/arch: arm64
+  kubernetes.io/os: linux
+
+hostNetwork: false
+hostPID: false
 
 service:
+  port: 9100
+  targetPort: 9100
   portName: metrics
