--- a/apps/node-exporter/app.yml
+++ b/apps/node-exporter/app.yml
@@ -10,8 +10,26 @@ spec:
     chart: prometheus-node-exporter
     targetRevision: 4.37.0
     helm:
-      valueFiles:
-        - values.yaml
+      values: |-
+        tolerations:
+          - key: "node-role.kubernetes.io/master"
+            operator: "Exists"
+            effect: "NoSchedule"
+          - key: "node-role.kubernetes.io/control-plane"
+            operator: "Exists"
+            effect: "NoSchedule"
+
+        nodeSelector:
+          kubernetes.io/arch: arm64
+          kubernetes.io/os: linux
+
+        hostNetwork: false
+        hostPID: false
+
+        service:
+          port: 9100
+          targetPort: 9100
+          portName: metrics
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
