--- a/apps/grafana/values.yml
+++ b/apps/grafana/values.yml
@@ -1,15 +1,56 @@
+# --- Credencials bàsiques (per proves). En prod: usa un Secret existent.
 adminUser: "admin"
 adminPassword: "changeme"
 
 service:
   type: NodePort
   nodePort: 32000
+  port: 3000
 
-# persistence:
-#   enabled: true
-#   size: 2Gi
-#   storageClassName: local-path
+# --- Persistència (PVC) ---
+persistence:
+  enabled: true
+  size: 2Gi
+  storageClassName: local-path
+  accessModes:
+    - ReadWriteOnce
 
+# --- Imatge multi-arch estable (ARM64/AMD64) ---
+image:
+  repository: grafana/grafana
+  tag: "11.2.0"
+  pullPolicy: IfNotPresent
+
+# --- Permisos correctes del volum (Grafana corre com uid/gid 472) ---
+podSecurityContext:
+  fsGroup: 472
+  fsGroupChangePolicy: "OnRootMismatch"
+
+securityContext:
+  runAsUser: 472
+  runAsGroup: 472
+  runAsNonRoot: true
+
+# --- Probes una mica més laxes per a RPi/K3s ---
+readinessProbe:
+  httpGet:
+    path: /api/health
+    port: 3000
+  initialDelaySeconds: 40
+  periodSeconds: 10
+  timeoutSeconds: 5
+  failureThreshold: 10
+
+livenessProbe:
+  httpGet:
+    path: /api/health
+    port: 3000
+  initialDelaySeconds: 60
+  periodSeconds: 20
+  timeoutSeconds: 5
+  failureThreshold: 6
+
+# --- Datasource de Prometheus (ajusta el port si el teu Service exposa :80) ---
 datasources:
   datasources.yaml:
     apiVersion: 1
@@ -17,17 +58,15 @@ datasources:
       - name: Prometheus
         type: prometheus
         access: proxy
-        url: http://prometheus-server.prometheus.svc.cluster.local
+        url: http://prometheus-server.prometheus.svc.cluster.local:9090
         isDefault: true
 
+# --- (Opcional) Un dashboard simple d'exemple ---
 dashboards:
   default:
-    # Dashboard simple amb mitjana de CPU del clúster
     cluster-cpu-average:
       json: |-
         {
-          "id": null,
-          "uid": null,
           "title": "Cluster CPU Average (5m)",
           "schemaVersion": 38,
           "version": 1,
@@ -40,15 +79,9 @@ dashboards:
               "id": 1,
               "datasource": "Prometheus",
               "targets": [
-                {
-                  "refId": "A",
-                  "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))",
-                  "instant": true
-                }
+                { "refId": "A", "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))", "instant": true }
               ],
-              "fieldConfig": {
-                "defaults": { "unit": "percent", "decimals": 1 }
-              },
+              "fieldConfig": { "defaults": { "unit": "percent", "decimals": 1 } },
               "gridPos": { "h": 8, "w": 8, "x": 0, "y": 0 }
             },
             {
@@ -59,22 +92,9 @@ dashboards:
               "targets": [
                 { "refId": "A", "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))" }
               ],
-              "fieldConfig": {
-                "defaults": { "unit": "percent", "decimals": 1 }
-              },
+              "fieldConfig": { "defaults": { "unit": "percent", "decimals": 1 } },
+              "options": { "legend": { "displayMode": "list", "placement": "bottom" } },
               "gridPos": { "h": 8, "w": 16, "x": 8, "y": 0 }
             }
           ]
         }
-
-    # Dashboard complet del node-exporter
-    node-exporter-full:
-      gnetId: 1860
-      revision: 31
-      datasource: Prometheus
-
-    # Dashboard de kube-state-metrics
-    kube-state-metrics:
-      gnetId: 13332
-      revision: 1
-      datasource: Prometheus
