--- a/apps/grafana/values.yml
+++ b/apps/grafana/values.yml
@@ -5,7 +5,8 @@ adminPassword: "changeme"
 service:
   type: NodePort
   nodePort: 32000
-  port: 3000
+  port: 80
+  targetPort: grafana
 
 # --- Persistència (PVC) ---
 persistence:
