--- a/apps/grafana/values.yml
+++ b/apps/grafana/values.yml
@@ -1,38 +1,28 @@
-# --- Credencials bàsiques (per proves). En prod: usa un Secret existent.
-adminUser: "admin"
-adminPassword: "changeme"
-
+---
+adminUser: admin
+adminPassword: changeme
 service:
   type: NodePort
   nodePort: 32000
   port: 80
   targetPort: 3000
-
-# --- Persistència (PVC) ---
 persistence:
   enabled: true
   size: 2Gi
   storageClassName: local-path
   accessModes:
     - ReadWriteOnce
-
-# --- Imatge multi-arch estable (ARM64/AMD64) ---
 image:
   repository: grafana/grafana
-  tag: "11.2.0"
+  tag: 11.2.0
   pullPolicy: IfNotPresent
-
-# --- Permisos correctes del volum (Grafana corre com uid/gid 472) ---
 podSecurityContext:
   fsGroup: 472
-  fsGroupChangePolicy: "OnRootMismatch"
-
+  fsGroupChangePolicy: OnRootMismatch
 securityContext:
   runAsUser: 472
   runAsGroup: 472
   runAsNonRoot: true
-
-# --- Probes una mica més laxes per a RPi/K3s ---
 readinessProbe:
   httpGet:
     path: /api/health
@@ -41,7 +31,6 @@ readinessProbe:
   periodSeconds: 10
   timeoutSeconds: 5
   failureThreshold: 18
-
 livenessProbe:
   httpGet:
     path: /api/health
@@ -50,8 +39,6 @@ livenessProbe:
   periodSeconds: 20
   timeoutSeconds: 5
   failureThreshold: 6
-
-# --- Datasource de Prometheus (ajusta el port si el teu Service exposa :80) ---
 datasources:
   datasources.yaml:
     apiVersion: 1
@@ -61,41 +48,39 @@ datasources:
         access: proxy
         url: http://prometheus-server.prometheus.svc.cluster.local:80
         isDefault: true
-
-# --- (Opcional) Un dashboard simple d'exemple ---
-# dashboards:
-#   default:
-#     cluster-cpu-average:
-#       json: |-
-#         {
-#           "title": "Cluster CPU Average (5m)",
-#           "schemaVersion": 38,
-#           "version": 1,
-#           "refresh": "10s",
-#           "time": { "from": "now-15m", "to": "now" },
-#           "panels": [
-#             {
-#               "type": "stat",
-#               "title": "CPU Avg (cluster, 5m)",
-#               "id": 1,
-#               "datasource": "Prometheus",
-#               "targets": [
-#                 { "refId": "A", "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))", "instant": true }
-#               ],
-#               "fieldConfig": { "defaults": { "unit": "percent", "decimals": 1 } },
-#               "gridPos": { "h": 8, "w": 8, "x": 0, "y": 0 }
-#             },
-#             {
-#               "type": "timeseries",
-#               "title": "CPU Avg (cluster over time)",
-#               "id": 2,
-#               "datasource": "Prometheus",
-#               "targets": [
-#                 { "refId": "A", "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))" }
-#               ],
-#               "fieldConfig": { "defaults": { "unit": "percent", "decimals": 1 } },
-#               "options": { "legend": { "displayMode": "list", "placement": "bottom" } },
-#               "gridPos": { "h": 8, "w": 16, "x": 8, "y": 0 }
-#             }
-#           ]
-#         }
+dashboards:
+  default:
+    cluster-cpu-average:
+      json: >-
+        {
+          "title": "Cluster CPU Average (5m)",
+          "schemaVersion": 38,
+          "version": 1,
+          "refresh": "10s",
+          "time": { "from": "now-15m", "to": "now" },
+          "panels": [
+            {
+              "type": "stat",
+              "title": "CPU Avg (cluster, 5m)",
+              "id": 1,
+              "datasource": "Prometheus",
+              "targets": [
+                { "refId": "A", "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))", "instant": true }
+              ],
+              "fieldConfig": { "defaults": { "unit": "percent", "decimals": 1 } },
+              "gridPos": { "h": 8, "w": 8, "x": 0, "y": 0 }
+            },
+            {
+              "type": "timeseries",
+              "title": "CPU Avg (cluster over time)",
+              "id": 2,
+              "datasource": "Prometheus",
+              "targets": [
+                { "refId": "A", "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))" }
+              ],
+              "fieldConfig": { "defaults": { "unit": "percent", "decimals": 1 } },
+              "options": { "legend": { "displayMode": "list", "placement": "bottom" } },
+              "gridPos": { "h": 8, "w": 16, "x": 8, "y": 0 }
+            }
+          ]
+        }
