--- a/apps/grafana/app.yml
+++ b/apps/grafana/app.yml
@@ -7,15 +7,117 @@ metadata:
 spec:
   project: default
   source:
-    - repoURL: https://grafana.github.io/helm-charts
-      chart: grafana
-      targetRevision: 10.1.4
-      helm:
-        valueFiles:
-          - $values/apps/grafana/values.yml
-    - repoURL: https://github.com/bruli/k3s-infra.git
-      targetRevision: main
-      ref: values
+    repoURL: https://grafana.github.io/helm-charts
+    chart: grafana
+    targetRevision: 10.1.4
+    helm:
+      values: >-
+        adminUser: "admin"
+
+        adminPassword: "changeme"
+
+
+        service:
+          type: NodePort
+          port: 80
+          targetPort: 3000
+          nodePort: 32000
+
+        persistence:
+          enabled: true
+          size: 2Gi
+          storageClassName: local-path
+          accessModes:
+            - ReadWriteOnce
+
+        image:
+          repository: grafana/grafana
+          tag: "11.2.0"
+          pullPolicy: IfNotPresent
+
+        podSecurityContext:
+          fsGroup: 472
+          fsGroupChangePolicy: "OnRootMismatch"
+
+        securityContext:
+          runAsUser: 472
+          runAsGroup: 472
+          runAsNonRoot: true
+
+        readinessProbe:
+          httpGet:
+            path: /api/health
+            port: 3000
+          initialDelaySeconds: 60
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 10
+
+        livenessProbe:
+          httpGet:
+            path: /api/health
+            port: 3000
+          initialDelaySeconds: 90
+          periodSeconds: 20
+          timeoutSeconds: 5
+          failureThreshold: 6
+
+        datasources:
+          datasources.yaml:
+            apiVersion: 1
+            datasources:
+              - name: Prometheus
+                type: prometheus
+                access: proxy
+                url: http://prometheus-server.prometheus.svc.cluster.local:9090
+                isDefault: true
+
+        dashboards:
+          default:
+            cluster-cpu-average:
+              json: |-
+                {
+                  "title": "Cluster CPU Average (5m)",
+                  "schemaVersion": 38,
+                  "version": 1,
+                  "refresh": "10s",
+                  "time": { "from": "now-15m", "to": "now" },
+                  "panels": [
+                    {
+                      "type": "stat",
+                      "title": "CPU Avg (cluster, 5m)",
+                      "id": 1,
+                      "datasource": "Prometheus",
+                      "targets": [
+                        { "refId": "A", "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))", "instant": true }
+                      ],
+                      "fieldConfig": { "defaults": { "unit": "percent", "decimals": 1 } },
+                      "gridPos": { "h": 8, "w": 8, "x": 0, "y": 0 }
+                    },
+                    {
+                      "type": "timeseries",
+                      "title": "CPU Avg (cluster over time)",
+                      "id": 2,
+                      "datasource": "Prometheus",
+                      "targets": [
+                        { "refId": "A", "expr": "100 * (1 - avg(rate(node_cpu_seconds_total{mode=\"idle\"}[5m])))" }
+                      ],
+                      "fieldConfig": { "defaults": { "unit": "percent", "decimals": 1 } },
+                      "options": { "legend": { "displayMode": "list", "placement": "bottom" } },
+                      "gridPos": { "h": 8, "w": 16, "x": 8, "y": 0 }
+                    }
+                  ]
+                }
+
+            node-exporter-full:
+              gnetId: 1860
+              revision: 31
+              datasource: Prometheus
+
+            kube-state-metrics:
+              gnetId: 13332
+              revision: 1
+              datasource: Prometheus
   destination:
     server: https://kubernetes.default.svc
     namespace: grafana
