--- a/apps/grafana/app.yml
+++ b/apps/grafana/app.yml
@@ -26,7 +26,7 @@ spec:
         persistence:
           enabled: true
           size: 2Gi
-          storageClassName: local-path
+          storageClassName: longhorn
           accessModes:
             - ReadWriteOnce
 
