--- a/apps/grafana/app.yml
+++ b/apps/grafana/app.yml
@@ -36,23 +36,9 @@ spec:
               - name: Prometheus
                 type: prometheus
                 access: proxy
-                url: http://prometheus-server.prometheus.svc.cluster.local
+                url: http://prometheus-server.prometheus.svc.cluster.local:80
                 isDefault: true
 
-        # (Opcional) dashboards provisionats
-#         dashboardProviders:
-#           dashboardproviders.yaml:
-#             apiVersion: 1
-#             providers:
-#               - name: 'default'
-#                 orgId: 1
-#                 folder: ''
-#                 type: file
-#                 disableDeletion: false
-#                 options:
-#                   path: /var/lib/grafana/dashboards/default
-#         dashboards:
-#           default: {}
   destination:
     server: https://kubernetes.default.svc
     namespace: grafana
