Adding monitoring for longhorn

--- a/apps/longhorn/app.yaml
+++ b/apps/longhorn/app.yaml
@@ -20,6 +20,12 @@ spec:
         persistence:
           defaultClass: true
           defaultFsType: ext4
+        metrics:
+          serviceMonitor:
+            enabled: true
+            namespace: prometheus
+            labels:
+              release: prometheus
   destination:
     server: https://kubernetes.default.svc
     namespace: longhorn-system
