--- a/apps/longhorn/app.yaml
+++ b/apps/longhorn/app.yaml
@@ -22,7 +22,7 @@ spec:
           defaultFsType: ext4
         metrics:
           serviceMonitor:
-            enabled: false
+            enabled: true
             namespace: prometheus
             labels:
               release: prometheus
