--- a/apps/node-exporter/app.yml
+++ b/apps/node-exporter/app.yml
@@ -44,7 +44,7 @@ spec:
         persistence:
           enabled: true
           size: 2Gi
-          storageClassName: local-path
+          storageClassName: longhorn
           accessModes: [ReadWriteOnce]
 
         service:
