--- a/back_applications/kube-prometheus-stack/app.yml
+++ b/back_applications/kube-prometheus-stack/app.yml
@@ -17,14 +17,10 @@ spec:
       values: |
         crds:
           enabled: true
-
         grafana:
-          enabled: false  # ja tens Grafana a banda
-
-        # Evita xocs amb el node-exporter antic (tens dos DaemonSets)
-        nodeExporter:
           enabled: false
-
+        nodeExporter:
+          enabled: true
         prometheus:
           enabled: true
           prometheusSpec:
