--- a/back_applications/grafana/app.yml
+++ b/back_applications/grafana/app.yml
@@ -28,7 +28,6 @@ spec:
           accessModes: ["ReadWriteOnce"]
           size: 5Gi
 
-        # Exemple de datasource (ajusta el nom del svc)
         datasources:
           datasources.yaml:
             apiVersion: 1
@@ -36,9 +35,28 @@ spec:
               - name: Prometheus
                 type: prometheus
                 access: proxy
-                url: http://prometheus-server.prometheus.svc.cluster.local:80
+                url: http://kube-prometheus-stack-prometheus.prometheus.svc:9090
                 isDefault: true
 
+        # (Opcional) Dashboard oficial Longhorn
+        dashboardProviders:
+          dashboardproviders.yaml:
+            apiVersion: 1
+            providers:
+              - name: 'default'
+                orgId: 1
+                folder: ''
+                type: file
+                disableDeletion: false
+                editable: true
+                options:
+                  path: /var/lib/grafana/dashboards/default
+        dashboards:
+          default:
+            longhorn:
+              gnetId: 13032
+              revision: 1
+              datasource: Prometheus
   destination:
     server: https://kubernetes.default.svc
     namespace: grafana
