--- a/apps/kube-prometheus-stack/app.yml
+++ b/apps/kube-prometheus-stack/app.yml
@@ -37,3 +37,5 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ApplyOutOfSyncOnly=true
+      - ServerSideApply=true
+      - Replace=true
