--- a/apps/longhorn/app.yaml
+++ b/apps/longhorn/app.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: longhorn
   namespace: argocd
+  annotations:
+      argocd.argoproj.io/sync-wave: "20"
 spec:
   project: default
   source:
