--- a/apps/kube-prometheus-stack/app.yml
+++ b/apps/kube-prometheus-stack/app.yml
@@ -4,8 +4,7 @@ kind: Application
 metadata:
   name: kube-prometheus-stack
   namespace: argocd
-  annotations:
-      argocd.argoproj.io/sync-wave: "10"
+  annotations: {argocd.argoproj.io/sync-wave: "10"}
 spec:
   project: default
   destination:
