--- a/apps/longhorn/app.yaml
+++ b/apps/longhorn/app.yaml
@@ -4,7 +4,6 @@ kind: Application
 metadata:
   name: longhorn
   namespace: argocd
-  annotations: {argocd.argoproj.io/sync-wave: "20"}
 spec:
   project: default
   source:
@@ -26,7 +25,7 @@ spec:
 
         metrics:
           serviceMonitor:
-            enabled: true
+            enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: longhorn-system
