--- a/apps/longhorn/app.yaml
+++ b/apps/longhorn/app.yaml
@@ -22,6 +22,12 @@ spec:
           defaultReplicaCount: 2
           createDefaultDiskLabeledNodes: true
 
+        preUpgradeChecker:
+                 nodeSelector:
+                   kubernetes.io/arch: arm64
+                 tolerations:
+                   - operator: "Exists"
+
         # Ingress senzill (HTTP) per evitar TLS fins que tot funcione
         ingress:
           enabled: true
