--- a/apps/longhorn/app.yaml
+++ b/apps/longhorn/app.yaml
@@ -15,6 +15,9 @@ spec:
     targetRevision: 1.9.2
     helm:
       values: |
+        serviceAccount:
+            create: true
+            name: longhorn-service-account
         metrics:
           enabled: false
 
