--- a/apps/longhorn/app.yaml
+++ b/apps/longhorn/app.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: longhorn
   namespace: argocd
+  labels:
+    app.kubernetes.io/part-of: storage
 spec:
   project: default
   destination:
@@ -15,23 +17,35 @@ spec:
     targetRevision: 1.9.2
     helm:
       values: |
+        # ServiceAccount perquè els jobs tinguen credencials des del principi
         serviceAccount:
-            create: true
-            name: longhorn-service-account
-        metrics:
-          enabled: false
+          create: true
+          name: longhorn-service-account
 
+        # Longhorn com a StorageClass per defecte del clúster
+        persistence:
+          defaultClass: true
+          defaultClassReplicaCount: 2
+          reclaimPolicy: Delete
+          migratable: true
+        defaultStorageClass:
+          enabled: true
+
+        # Config bàsica i sense mètriques (evita CRDs de monitoring)
         defaultSettings:
           defaultReplicaCount: 2
           createDefaultDiskLabeledNodes: true
+        metrics:
+          enabled: false
 
+        # Evita que el pre-upgrade checker es quede sense node per affinity/taints
         preUpgradeChecker:
-                 nodeSelector:
-                   kubernetes.io/arch: arm64
-                 tolerations:
-                   - operator: "Exists"
+          nodeSelector:
+            kubernetes.io/arch: arm64
+          tolerations:
+            - operator: "Exists"
 
-        # Ingress senzill (HTTP) per evitar TLS fins que tot funcione
+        # Ingress senzill (HTTP) per a la UI de Longhorn
         ingress:
           enabled: true
           ingressClassName: traefik
